fix deprecated constructor call